# okanyanwohayarasero

./: Cargo.toml  netlify.toml  package-lock.json  package.json  rust-toolchain.toml  webpack.config.js
src/: barrier.rs  beam.rs  bonus.rs  bonus_balloon.rs  bonus_wood_box.rs  browser.rs  create_enemy.rs  create_platform.rs  data_for_playing.rs  enemy.rs  enemy_beam.rs  enemy_energy.rs  enemy_fubura.rs  enemy_hato.rs  enemy_kedama.rs  enemy_okayu.rs  enemy_pokobe.rs  enemy_rocket.rs  engine.rs  game.rs  lib.rs  obstacle.rs  platform.rs  player.rs  segment.rs  sound.rs  special.rs  special_kazama.rs  special_okanyan.rs
static/: bonus_sheet.json  enemy_sheet.json  fubura_sheet.json  hato_sheet.json  index.html  kazama_sheet.json  kedama_sheet.json  platform_sheet.json  platform_sheet_.json  player_sheet.json  style.css
tests/: app.rs
